prevent participant boxes from shifting to different lines [APERTA-5627]

--- a/app/assets/stylesheets/components/_select2-participant-selector.scss
+++ b/app/assets/stylesheets/components/_select2-participant-selector.scss
@@ -79,6 +79,10 @@
       }
     }
   }
+
+  .participant-select2 {
+    display: inline-block;
+  }
 }
 
 .add-participant-button {
